# aligenie-esp32-demo

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
components/wifi_sta_manager/: CMakeLists.txt  wifi_sta_manager.c
components/wifi_sta_manager/inc/: wifi_sta_manager.h
main/: CMakeLists.txt
main/app/data_proc/: data_proc.c  data_proc_list.inc  dp_common.c  dp_storage.c  dp_wifi_sta.c
main/app/data_proc/inc/: data_proc.h  data_proc_def.h
main/app/resources/: resources.c
main/app/resources/inc/: resources.h
main/app/storage/: storage.c
main/app/storage/inc/: storage.h
main/app/tasks/cmdline/: cmd_iperf.c  cmd_uname.c  task_cmdline.c
main/app/tasks/cmdline/inc/: cmdline_def.h
main/app/tasks/daemon/: task_daemon.c
main/app/tasks/inc/: tasks_def.h
main/app/utils/: soft_timer.c
main/app/utils/inc/: soft_timer.h
main/common/utils/resource_manager/: resource_manager.c
main/config/: options.h
